--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "bootstrap": "^4.6.0",
     "gulp-svg-sprite": "^1.5.0",
     "jquery": "^3.6.0",
-    "popper.js": "^1.14.7",
-    "swiper": "^7.0.9"
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.14.7"
   }
 }
